--- a/Readme
+++ b/Readme
@@ -1,5 +1,7 @@
 Please go through the PPT sent with the project submission. 
 
+IMPORTANT POINTS
+
 HOW THE USERS CAN CHAT BEFORE, DURING AND AFTER THE MEETING?
 
 The Users can chat before the meeting and after the meeting in the Team chat rooms.
