--- a/Readme
+++ b/Readme
@@ -1,3 +1,4 @@
+Link to the project: https://microsoft-teams-clone-lavish.netlify.app
 Please go through the PPT sent with the project submission. 
 
 IMPORTANT POINTS
